fix: Registry.add() format specifier, datastore file path